# MiniRTS

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
async/: Future.h  Promise.h  SharedState.h
bench/: CMakeLists.txt  bench.cpp  bench_utils.h  sample_output.txt
example/: CMakeLists.txt  example.cpp
runtime/: Constants.h  DefaultThreadPool.h  Runtime.cpp  Runtime.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  Utils.h  Worker.cpp  Worker.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api.h
src/async/: CMakeLists.txt  future.h  promise.h  shared_state.h  spawn.h  when_all.h  when_any.h
src/core/: CMakeLists.txt  concepts.h  constants.h  default_thread_pool.h  runtime.h  task.h  thread_pool.h  utils.h  when_all.h  worker.cpp  worker.h
test/: CMakeLists.txt  test_future.cpp  test_runtime.cpp  test_threadpool.cpp  test_when_all.cpp  test_when_any.cpp
